2008-12-23  Cedric Vivier  <cedricv@neonux.com>

	* CloneMethodShouldNotReturnNull.cs:
	* ToStringReturnsNullRule.cs:
	* PreferEmptyInstanceOverNullRule.cs:
	* ReturnNullRule.cs: Improve text and consistency between ReturnNullRule inheritors.
	* ToStringReturnsNullRule.cs: Rename to ToStringShouldNotReturnNullRule.

2008-12-23  Cedric Vivier  <cedricv@neonux.com>

	* PreferEmptyInstanceOverNullRule.cs: New. This rule checks that
	methods/properties returning a string, an array, a collection, or
	an enumerable, do not return null.

2008-12-13  Jesse Jones  <jesjones@mindspring.com> 

	* ObsoleteMessagesShouldNotBeEmptyRule.cs, 
	CloneMethodShouldNotReturnNullRule.cs, 
	GetEntryAssemblyMayReturnNullRule.cs, 
	DisableDebuggingCodeRule.cs: Fix AnalyzeModule so that it 
	activates the rule properly when multiple assemblies or modules are 
	being checked.

2008-12-09  Jesse Jones  <jesjones@mindspring.com>

	* AvoidAssemblyVersionMismatchRule.cs: Tweaked the language in the
	description.

2008-12-02  Sebastien Pouliot  <sebastien@ximian.com>

	* ObsoleteMessagesShouldNotBeEmptyRule.cs: Avoid using two conditions
	leading to the exact same code.

2008-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidAssemblyVersionMismatchRule.cs: Use HasCustomAttributes
	* AvoidVisibleConstantFieldRule.cs: Use HasFields
	* CheckNewExceptionWithoutThrowingRule.cs: Use HasParameters
	* CheckNewThreadWithoutStartRule.cs: Use HasParameters
	* DisableDebuggingCodeRule.cs: Use HasCustomAttributes
	* ObsoleteMessagesShouldNotBeEmptyRule.cs: Use HasCustomAttributes,
	HasEvents, HasFields, HasProperties, HasConstructors and HasMethods

2008-11-20  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidCallingProblematicMethodsRule.cs: Rework SortedDictionary not
	to require the full name, which avoid calling MethodReference so 
	many times (each time creating a string).
	* CloneMethodShouldNotReturnNullRule.cs: Only apply rules if the 